@@ -18,7 +18,7 @@ buildscript {
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
-version = "0.3.5"
+version = "0.3.6"
 
 configure(allprojects) {
 	ext.javadocLinks = [
