@@ -8,6 +8,8 @@ import java.util.LinkedList;
 
 import org.apache.commons.io.FileUtils;
 
+import com.amazonaws.Protocol;
+import com.matoski.glacier.Constants;
 import com.matoski.glacier.base.AbstractCommand;
 import com.matoski.glacier.cli.CommandSync;
 import com.matoski.glacier.enums.Metadata;
@@ -16,6 +18,7 @@ import com.matoski.glacier.errors.VaultNameNotPresentException;
 import com.matoski.glacier.pojo.Config;
 import com.matoski.glacier.pojo.journal.State;
 import com.matoski.glacier.util.AmazonGlacierBaseUtil;
+import com.matoski.glacier.util.Helpers;
 import com.matoski.glacier.util.upload.AmazonGlacierUploadUtil;
 
 /**
@@ -64,15 +67,15 @@ public class SyncCommand extends AbstractCommand<CommandSync> {
     if (!validVaultName && !validVaultNameConfig) {
       throw new VaultNameNotPresentException();
     }
-    
+
     if (validVaultNameConfig) {
       command.vaultName = config.getVault();
     }
-    
+
     if (command.partSize % 2 != 0 && command.partSize != 1) {
       throw new IllegalArgumentException("Part size has to be a multiple of 2");
     }
-    
+
     command.partSize = command.partSize * (int) AmazonGlacierBaseUtil.MINIMUM_PART_SIZE;
 
     try {
@@ -89,17 +92,30 @@ public class SyncCommand extends AbstractCommand<CommandSync> {
   }
 
   @Override
+  public void setProtocol() {
+    if (this.command.forceHttpConnection) {
+      protocol = Protocol.HTTP;
+    }
+  }
+
+  @Override
   public void run() {
 
     System.out.println("START: sync\n");
 
     AmazonGlacierUploadUtil upload = new AmazonGlacierUploadUtil(credentials, client, region);
     Boolean exists = false;
+    String processFile;
 
     Collection<File> result = FileUtils.listFiles(new File(config.getDirectory()), null, true);
 
     for (File file : result) {
-      files.add(file.getAbsolutePath().replace(config.getDirectory() + "/", ""));
+
+      if (!Helpers.verifyIsValidStateFile(file.getAbsolutePath())) {
+        processFile = file.getAbsolutePath().replace(config.getDirectory() + "/", "");
+        files.add(processFile);
+      }
+
     }
 
     System.out.println(String.format("%s files found%n", files.size()));
